2011-01-05  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.c (_gids_hash_create): Tweaked test of return value
	  from _gids_user_to_uid().

	* src/munged/xgetgrent.c (xgetgrent): Renamed lock to mutex.

	* src/munged/gids.c (_gids_hash_create): Replaced calls to
	  setgrent(), getgrent(), and endgrent() with xgetgrent_init(),
	  xgetgrent(), and xgetgrent_fini().
	* src/munged/xgetgrent.c, src/munged/xgetgrent.h: Added.
	* src/munged/Makefile.am: Added xgetgrent.c and xgetgrent.h.

2010-12-14  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_getgrent.m4: Renamed HAVE_GETGRENT_R_POSIX to
	  HAVE_GETGRENT_R_GNU.

2010-12-04  Chris Dunlap  <cdunlap@llnl.gov>

	* configure.ac: Fixed typo.

	* configure.ac, config/x_ac_getgrent.m4: Added X_AC_GETGRENT.

	* configure.ac: Added autoconf check for sysconf().

	* configure.ac: Moved X_AC_SELECT_AUTH_METHOD to end.

2010-11-04  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.c (_gids_update): Set t_last_update to the time of
	  the last successful update instead of the GIDS_GROUP_FILE mtime.

	* src/munged/gids.c (_gids_update): Minor cosmetic changes.

	* src/munged/gids.c (gids_create, _gids_update): Fixed do_group_stat
	  not being protected by the gids mutex.  A minor race-condition
	  could occur if a SIGHUP was received towards the beginning of
	  _gids_update().  Now the mutex is held while do_group_stat is copied.
	  And since the mutex is being acquired at the top of _gids_update,
	  t_last_update has been moved into the gids struct as well.

2010-11-03  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.c (_gids_hash_create): Minor cosmetic changes.

	* src/munged/gids.c (_gids_user_to_uid): Made errors inserting into the
	  uid hash nonfatal since they are just a performance optimization.

	* src/munged/gids.c: Minor cosmetic changes.

	* src/munged/gids.h (gids_is_member): Fixed comment.

	* : Re-bootstrap'd with autoconf-2.67.

2010-09-21  Chris Dunlap  <cdunlap@llnl.gov>
